# curses-text-editor

./: CMakeLists.txt  curses-text-editor.cpp  editor-utils.cpp  utils.cpp
headers/: curses-text-editor.h  editor-utils.h  utils.h
